tests/semantic/record_type/record_type.err
Error: Number constant (type mismatch) in file record_type.dl at line 17
MyRelation(0).
-----------^---
Error: Number constant (type mismatch) in file record_type.dl at line 18
MyRelation(7).
-----------^---
Error: Number constant (type mismatch) in file record_type.dl at line 19
MyRelation(-7).
-----------^----
Error: Symbol constant (type mismatch) in file record_type.dl at line 20
MyRelation("7").
-----------^-----
Error: Mismatching arity of relation MyRelation in file record_type.dl at line 21
MyRelation(7, 7).
^-----------------
Error: Number constant (type mismatch) in file record_type.dl at line 23
MyRelation([7, 7, 7]).
------------^----------
Error: Number constant (type mismatch) in file record_type.dl at line 23
MyRelation([7, 7, 7]).
---------------^-------
Error: Number constant (type mismatch) in file record_type.dl at line 23
MyRelation([7, 7, 7]).
------------------^----
8 errors generated, evaluation aborted
